# test_stage1

./: .env  .env.docker  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  middlewares.py  models.py
src/auth_api/: models.py  shortcuts.py  views.py
src/test_stage1/: settings.py
src/users_api/: crud.py  db.py  enums.py  models.py  shortcuts.py  views.py
tests/: test_main.py
tests/fixtures/: users.yaml
tests/users_api/: test_shortcuts.py  test_views.py
