[tool.poetry]
name = "stage1-app"
version = "0.1.0"
description = ""
authors = ["Yurii Kosiv <yurdosii.ksv@gmail.com>"]
readme = "README.md"
packages = [{include = "stage1_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.3.3"
motor = "^3.1.2"
flake8-pyproject = "^1.2.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
httpx = "^0.24.0"
pytest-async-mongodb = {git = "https://github.com/gonzaloverussa/pytest-async-mongodb.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
exclude = '''
  /(
    \.git
    | __pycache__
  )/
'''

[tool.flake8]
max-line-length = 79
exclude = [".git", "__pycache__"]

[tool.isort]
profile = "black"
src_paths = ["./src"]
force_alphabetical_sort_within_sections = true
virtual_env = "./.venv/"

[[tool.mypy.overrides]]
module = [
  "motor.*",
  "jose.*",
  "passlib.context.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
async_mongodb_fixture_dir = "tests/fixtures"

async_mongodb_fixtures = [
  "users"
]
